// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test suite for recipe detail page Render component with complete props Should delete a recipe 1`] = `
<MockRouter
  createHref={[Function]}
  location=""
  params={Object {}}
  path=""
  push={[Function]}
  replace={[Function]}
  url=""
>
  <RecipeItem
    auth={
      Object {
        "allUsers": Object {
          "success": true,
          "users": Array [
            Object {
              "avatar": null,
              "bio": null,
              "country": null,
              "createdAt": "2018-03-13T05:04:37.443Z",
              "email": "emasysnd@gmail.com",
              "firstName": null,
              "id": 1,
              "lastName": null,
              "moniker": "admin",
              "password": "$2a$10$47oncNYPerLpBX2BfrUSpeUo4KMIU5dsHkJo3hRUWw1n58K6muoUS",
              "updatedAt": "2018-03-13T05:04:37.443Z",
            },
          ],
        },
        "authInfo": Object {
          "isLoggedIn": true,
          "userId": 1,
          "username": "admin",
        },
        "isLoggedIn": true,
        "message": null,
        "userInfo": Object {
          "data": Object {
            "avatar": null,
            "bio": null,
            "country": "Nigeria",
            "email": "emasysnd@gmail.com",
            "firstName": "emmy",
            "id": 1,
            "lastName": "endy",
            "moniker": "admin",
          },
          "success": true,
        },
        "userProfile": Object {
          "data": Object {
            "avatar": null,
            "bio": null,
            "country": null,
            "email": "emasysnd@gmail.com",
            "firstName": null,
            "id": 1,
            "lastName": null,
            "moniker": "admin",
          },
          "success": true,
        },
      }
    }
    clearRecipes={[Function]}
    delRecipe={[Function]}
    downvote={[Function]}
    editRecipe={[Function]}
    getRecipeItem={[Function]}
    getRecipeReactions={[Function]}
    history={
      Object {
        "push": [Function],
      }
    }
    match={
      Object {
        "params": Object {
          "id": 1,
        },
      }
    }
    recipes={
      Object {
        "allRecipes": Array [],
        "category": Array [
          Object {
            "category": "Lunch",
            "comments": 0,
            "createdAt": "2018-03-13T05:05:02.553Z",
            "description": "Normal food",
            "direction": "Just do it",
            "downvote": 0,
            "favorite": 0,
            "foodImg": "https://res.cloudinary.com/emasys/image/upload/v1514552968/thumb_image_not_available_dqr7h2.png",
            "id": 1,
            "ingredients": Array [
              "water, salt",
            ],
            "name": "A really long recipe title to make sure the words are truncated",
            "reactionDown": Array [],
            "reactionUp": Array [],
            "searchIng": "water, salt",
            "updatedAt": "2018-03-13T05:12:41.611Z",
            "upvote": 0,
            "userId": 1,
            "views": 0,
          },
        ],
        "count": 1,
        "hotRecipes": Array [
          Object {
            "category": "Lunch",
            "comments": 0,
            "createdAt": "2018-03-13T05:05:02.553Z",
            "description": "Normal food",
            "direction": "Just do it",
            "downvote": 0,
            "favorite": 0,
            "foodImg": "https://res.cloudinary.com/emasys/image/upload/v1514552968/thumb_image_not_available_dqr7h2.png",
            "id": 1,
            "ingredients": Array [
              "water, salt",
            ],
            "name": "A really long recipe title to make sure the words are truncated",
            "reactionDown": Array [],
            "reactionUp": Array [],
            "searchIng": "water, salt",
            "updatedAt": "2018-03-13T05:12:41.611Z",
            "upvote": 0,
            "userId": 1,
            "views": 0,
          },
        ],
        "recipeItem": Object {
          "recipe": Object {
            "category": "Lunch",
            "comments": 0,
            "createdAt": "2018-03-13T05:05:02.553Z",
            "description": "just do it",
            "direction": "just do it",
            "downvote": 0,
            "favorite": 0,
            "favorites": Array [],
            "foodImg": "https://res.cloudinary.com/emasys/image/upload/v1514552968/thumb_image_not_available_dqr7h2.png",
            "id": 1,
            "ingredients": Array [
              "water, salt",
            ],
            "name": "How to cook yam",
            "reactionDown": Array [],
            "reactionUp": Array [],
            "searchIng": "water, salt",
            "updatedAt": "2018-03-14T18:21:16.794Z",
            "upvote": 0,
            "userId": 1,
            "views": 0,
          },
          "success": true,
        },
        "searchResult": Array [],
        "updated": false,
        "userRecipes": Array [],
        "userRecipesCount": 0,
      }
    }
    setFavorite={[Function]}
    uploadImg={[Function]}
    upvote={[Function]}
    userInfo={
      Object {
        "data": Object {
          "avatar": null,
          "bio": null,
          "country": "Nigeria",
          "email": "emasysnd@gmail.com",
          "firstName": "emmy",
          "id": 1,
          "lastName": "endy",
          "moniker": "admin",
        },
        "success": true,
      }
    }
  >
    <div>
      <Connect(Navbar)
        className="bg-dark fixed-top"
      />
      <ToastContainer
        autoClose={5000}
        bodyClassName=""
        className={null}
        closeButton={<DefaultCloseButton />}
        closeOnClick={true}
        hideProgressBar={false}
        newestOnTop={false}
        pauseOnHover={true}
        position="top-right"
        progressClassName=""
        style={null}
        toastClassName=""
        transition={[Function]}
      >
        <div />
      </ToastContainer>
      <DeleteModal
        confirmDelete={[Function]}
      >
        <div
          aria-hidden="true"
          aria-labelledby="deleteModalTitle"
          className="modal fade"
          id="deleteModal"
          role="dialog"
          tabIndex="-1"
        >
          <div
            className="modal-dialog modal-dialog-centered"
            role="document"
          >
            <div
              className="modal-content"
            >
              <div
                className="modal-header"
              >
                <h5
                  className="modal-title"
                  id="exampleModalLongTitle"
                >
                  Delete Item
                </h5>
                <button
                  aria-label="Close"
                  className="close"
                  data-dismiss="modal"
                  type="button"
                >
                  <span
                    aria-hidden="true"
                  >
                    ×
                  </span>
                </button>
              </div>
              <div
                className="modal-body"
              >
                Are you sure you want to continue with this action?
              </div>
              <div
                className="modal-footer"
              >
                <button
                  className="btn btn-secondary btn-lg"
                  data-dismiss="modal"
                  type="button"
                >
                  No
                </button>
                <button
                  className="btn btn-danger btn-lg"
                  data-dismiss="modal"
                  id="confirmDelete"
                  onClick={[Function]}
                  type="button"
                >
                  Yes
                </button>
              </div>
            </div>
          </div>
        </div>
      </DeleteModal>
      <section
        className="container mt-80"
        data-aos="fade-up"
        data-duration="800"
      >
        <div
          className="row justify-content-center catalog-wrapper mb-20"
          id="catalog"
        >
          <div
            className="col-lg-6 col-md-6 col-sm-8  mb-5 recipe-image"
          >
            <GenerateRecipeItem
              auth={
                Object {
                  "allUsers": Object {
                    "success": true,
                    "users": Array [
                      Object {
                        "avatar": null,
                        "bio": null,
                        "country": null,
                        "createdAt": "2018-03-13T05:04:37.443Z",
                        "email": "emasysnd@gmail.com",
                        "firstName": null,
                        "id": 1,
                        "lastName": null,
                        "moniker": "admin",
                        "password": "$2a$10$47oncNYPerLpBX2BfrUSpeUo4KMIU5dsHkJo3hRUWw1n58K6muoUS",
                        "updatedAt": "2018-03-13T05:04:37.443Z",
                      },
                    ],
                  },
                  "authInfo": Object {
                    "isLoggedIn": true,
                    "userId": 1,
                    "username": "admin",
                  },
                  "isLoggedIn": true,
                  "message": null,
                  "userInfo": Object {
                    "data": Object {
                      "avatar": null,
                      "bio": null,
                      "country": "Nigeria",
                      "email": "emasysnd@gmail.com",
                      "firstName": "emmy",
                      "id": 1,
                      "lastName": "endy",
                      "moniker": "admin",
                    },
                    "success": true,
                  },
                  "userProfile": Object {
                    "data": Object {
                      "avatar": null,
                      "bio": null,
                      "country": null,
                      "email": "emasysnd@gmail.com",
                      "firstName": null,
                      "id": 1,
                      "lastName": null,
                      "moniker": "admin",
                    },
                    "success": true,
                  },
                }
              }
              downvote={[Function]}
              favIt={[Function]}
              foodImg="https://res.cloudinary.com/emasys/image/upload/v1514552968/thumb_image_not_available_dqr7h2.png"
              handleDrop={[Function]}
              handleImg={[Function]}
              hoverIn={[Function]}
              hoverOut={[Function]}
              reactionDown={Array []}
              reactionUp={Array []}
              state={
                Object {
                  "authInfo": Object {},
                  "deleteRecipe": false,
                  "description": "",
                  "direction": "",
                  "downvoteStatus": false,
                  "edit": false,
                  "editRecipeItem": false,
                  "error": "d-none",
                  "favoriteStatus": false,
                  "fetchRecipe": false,
                  "files": null,
                  "ingredients": "",
                  "name": "",
                  "preview": null,
                  "recipeItem": Object {
                    "recipe": Object {
                      "category": "Lunch",
                      "comments": 0,
                      "createdAt": "2018-03-13T05:05:02.553Z",
                      "description": "just do it",
                      "direction": "just do it",
                      "downvote": 0,
                      "favorite": 0,
                      "favorites": Array [],
                      "foodImg": "https://res.cloudinary.com/emasys/image/upload/v1514552968/thumb_image_not_available_dqr7h2.png",
                      "id": 1,
                      "ingredients": Array [
                        "water, salt",
                      ],
                      "name": "How to cook yam",
                      "reactionDown": Array [],
                      "reactionUp": Array [],
                      "searchIng": "water, salt",
                      "updatedAt": "2018-03-14T18:21:16.794Z",
                      "upvote": 0,
                      "userId": 1,
                      "views": 0,
                    },
                    "success": true,
                  },
                  "save": "d-none",
                  "status": "fade",
                  "upvoteStatus": false,
                }
              }
              upvote={[Function]}
            >
              <div
                className="mb-20"
              >
                <div>
                  <button
                    className="btn btn-success mb-5 d-none"
                    id="upload-image-btn"
                    onClick={[Function]}
                  >
                    Upload Image
                  </button>
                </div>
                <figure
                  className="img-wrapper"
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                >
                  <img
                    alt="foodie"
                    className="img-fluid rounded recipeImage"
                    src="https://res.cloudinary.com/emasys/image/upload/v1514552968/thumb_image_not_available_dqr7h2.png"
                  />
                </figure>
                <div
                  className="d-inline mt-3 reaction-pane justify-content-center"
                >
                  <span
                    className="text-center card-link"
                    onClick={[Function]}
                  >
                    <i
                      className="material-icons hovered gray"
                      data-tip="Add to favorites"
                      id="favorite-recipe"
                    >
                      
                    </i>
                    <em
                      className="bold"
                    >
                      0
                    </em>
                  </span>
                  <span
                    className="text-center card-link mr-1"
                    onClick={[Function]}
                  >
                    <i
                      aria-hidden="true"
                      className="material-icons  gray fa-2x"
                      data-tip="upvote"
                      id="like"
                    >
                      
                    </i>
                    <em
                      className=""
                    >
                      0
                    </em>
                  </span>
                  <span
                    className="text-center card-link mr-1"
                    onClick={[Function]}
                  >
                    <i
                      aria-hidden="true"
                      className="material-icons  gray"
                      data-tip="Downvote"
                      id="dislike"
                    >
                      
                    </i>
                    <em
                      style={
                        Object {
                          "verticalAlign": "middle",
                        }
                      }
                    >
                      0
                    </em>
                  </span>
                  <span
                    className="text-center card-link m-1"
                  >
                    <i
                      className="material-icons gray"
                      data-tip="Views"
                    >
                      
                    </i>
                    <em>
                      0
                    </em>
                  </span>
                  <ReactTooltip
                    effect="float"
                    insecure={true}
                    place="bottom"
                    resizeHide={true}
                    type="dark"
                    wrapper="div"
                  >
                    <div
                      className="__react_component_tooltip place-top type-dark "
                      data-id="tooltip"
                    />
                  </ReactTooltip>
                </div>
                <hr />
                <span
                  className="labels float-right px-1"
                >
                  <i
                    className="material-icons gray"
                  >
                    
                  </i>
                  <Link
                    className=" text-dark rounded "
                    data-tip="Category"
                    replace={false}
                    to="/category/lunch"
                  >
                    <a
                      className=" text-dark rounded "
                      data-tip="Category"
                      onClick={[Function]}
                    >
                      Lunch
                    </a>
                  </Link>
                </span>
              </div>
            </GenerateRecipeItem>
          </div>
          <Ingredients
            data={
              Object {
                "data": Object {
                  "avatar": null,
                  "bio": null,
                  "country": "Nigeria",
                  "email": "emasysnd@gmail.com",
                  "firstName": "emmy",
                  "id": 1,
                  "lastName": "endy",
                  "moniker": "admin",
                },
                "success": true,
              }
            }
            ingredients={
              Object {
                "recipe": Object {
                  "category": "Lunch",
                  "comments": 0,
                  "createdAt": "2018-03-13T05:05:02.553Z",
                  "description": "just do it",
                  "direction": "just do it",
                  "downvote": 0,
                  "favorite": 0,
                  "favorites": Array [],
                  "foodImg": "https://res.cloudinary.com/emasys/image/upload/v1514552968/thumb_image_not_available_dqr7h2.png",
                  "id": 1,
                  "ingredients": Array [
                    "water, salt",
                  ],
                  "name": "How to cook yam",
                  "reactionDown": Array [],
                  "reactionUp": Array [],
                  "searchIng": "water, salt",
                  "updatedAt": "2018-03-14T18:21:16.794Z",
                  "upvote": 0,
                  "userId": 1,
                  "views": 0,
                },
                "success": true,
              }
            }
          >
            <div
              className="col-lg-5 col-sm-12"
            >
              <h2
                className="wrapWord text-capitalize"
              >
                How to cook yam
              </h2>
              <small
                className="text-capitalize"
              >
                A recipe by
                 
                <Link
                  className=" bolder text-info"
                  replace={false}
                  to="/user/1"
                >
                  <a
                    className=" bolder text-info"
                    onClick={[Function]}
                  >
                    admin
                  </a>
                </Link>
              </small>
               
              <br />
              <small
                className=""
              >
                Posted on:
                 
                Mar 13th 2018
              </small>
              <hr />
              <h5
                className="text-muted"
              >
                Description
              </h5>
              <div
                className="pb-3 "
              >
                <div
                  className="bg-light direction rounded p-15"
                >
                  just do it
                </div>
              </div>
              <hr />
              <h5
                className="text-muted"
              >
                Ingredients
              </h5>
              <hr />
              <div
                className="pb-3"
              >
                <ul
                  className="list-group wrapWord"
                >
                  <a
                    className="list-group-item text-capitalize list-group-item-action"
                    href="https://en.wikipedia.org/wiki/water, salt"
                    key="water, salt"
                    target="_blank"
                  >
                    water, salt
                  </a>
                </ul>
              </div>
              <h5
                className="text-muted"
              >
                Directions
              </h5>
              <hr />
              <div
                className="p-10 direction rounded  bg-light"
              >
                just do it
              </div>
            </div>
          </Ingredients>
        </div>
        <Connect(Reviews) />
      </section>
    </div>
  </RecipeItem>
</MockRouter>
`;

exports[`Test suite for recipe detail page Render component with complete props should call componentWillReceiveProps and initiate delete process 1`] = `
<div>
  <Connect(Navbar)
    className="bg-dark fixed-top"
  />
  <ToastContainer
    autoClose={5000}
    bodyClassName=""
    className={null}
    closeButton={<DefaultCloseButton />}
    closeOnClick={true}
    hideProgressBar={false}
    newestOnTop={false}
    pauseOnHover={true}
    position="top-right"
    progressClassName=""
    style={null}
    toastClassName=""
    transition={[Function]}
  />
  <DeleteModal
    confirmDelete={[Function]}
  />
  <section
    className="container mt-80"
    data-aos="fade-up"
    data-duration="800"
  >
    <div
      className="row justify-content-center catalog-wrapper mb-20"
      id="catalog"
    >
      <div
        className="col-lg-6 col-md-6 col-sm-8  mb-5 recipe-image"
      >
        <GenerateRecipeItem
          auth={
            Object {
              "allUsers": Object {
                "success": true,
                "users": Array [
                  Object {
                    "avatar": null,
                    "bio": null,
                    "country": null,
                    "createdAt": "2018-03-13T05:04:37.443Z",
                    "email": "emasysnd@gmail.com",
                    "firstName": null,
                    "id": 1,
                    "lastName": null,
                    "moniker": "admin",
                    "password": "$2a$10$47oncNYPerLpBX2BfrUSpeUo4KMIU5dsHkJo3hRUWw1n58K6muoUS",
                    "updatedAt": "2018-03-13T05:04:37.443Z",
                  },
                ],
              },
              "authInfo": Object {
                "isLoggedIn": true,
                "userId": 1,
                "username": "admin",
              },
              "isLoggedIn": true,
              "message": null,
              "userInfo": Object {
                "data": Object {
                  "avatar": null,
                  "bio": null,
                  "country": "Nigeria",
                  "email": "emasysnd@gmail.com",
                  "firstName": "emmy",
                  "id": 1,
                  "lastName": "endy",
                  "moniker": "admin",
                },
                "success": true,
              },
              "userProfile": Object {
                "data": Object {
                  "avatar": null,
                  "bio": null,
                  "country": null,
                  "email": "emasysnd@gmail.com",
                  "firstName": null,
                  "id": 1,
                  "lastName": null,
                  "moniker": "admin",
                },
                "success": true,
              },
            }
          }
          downvote={[Function]}
          favIt={[Function]}
          foodImg="https://res.cloudinary.com/emasys/image/upload/v1514552968/thumb_image_not_available_dqr7h2.png"
          handleDrop={[Function]}
          handleImg={[Function]}
          hoverIn={[Function]}
          hoverOut={[Function]}
          reactionDown={Array []}
          reactionUp={Array []}
          state={
            Object {
              "authInfo": Object {
                "isLoggedIn": true,
                "userId": 1,
                "username": "admin",
              },
              "category": "Lunch",
              "deleteRecipe": false,
              "description": "just do it",
              "direction": "just do it",
              "downvoteStatus": false,
              "edit": true,
              "editRecipeItem": false,
              "error": "d-none",
              "favoriteStatus": false,
              "fetchRecipe": true,
              "files": null,
              "foodImg": "https://res.cloudinary.com/emasys/image/upload/v1514552968/thumb_image_not_available_dqr7h2.png",
              "ingredients": "water, salt",
              "name": "How to cook yam",
              "preview": null,
              "recipeItem": Object {
                "recipe": Object {
                  "category": "Lunch",
                  "comments": 0,
                  "createdAt": "2018-03-13T05:05:02.553Z",
                  "description": "just do it",
                  "direction": "just do it",
                  "downvote": 0,
                  "favorite": 0,
                  "favorites": Array [],
                  "foodImg": "https://res.cloudinary.com/emasys/image/upload/v1514552968/thumb_image_not_available_dqr7h2.png",
                  "id": 1,
                  "ingredients": Array [
                    "water, salt",
                  ],
                  "name": "How to cook yam",
                  "reactionDown": Array [],
                  "reactionUp": Array [],
                  "searchIng": "water, salt",
                  "updatedAt": "2018-03-14T18:21:16.794Z",
                  "upvote": 0,
                  "userId": 1,
                  "views": 0,
                },
                "success": true,
              },
              "save": "d-none",
              "status": "fade",
              "upvoteStatus": false,
            }
          }
          upvote={[Function]}
        />
      </div>
      <Ingredients
        data={
          Object {
            "data": Object {
              "avatar": null,
              "bio": null,
              "country": "Nigeria",
              "email": "emasysnd@gmail.com",
              "firstName": "emmy",
              "id": 1,
              "lastName": "endy",
              "moniker": "admin",
            },
            "success": true,
          }
        }
        ingredients={
          Object {
            "recipe": Object {
              "category": "Lunch",
              "comments": 0,
              "createdAt": "2018-03-13T05:05:02.553Z",
              "description": "just do it",
              "direction": "just do it",
              "downvote": 0,
              "favorite": 0,
              "favorites": Array [],
              "foodImg": "https://res.cloudinary.com/emasys/image/upload/v1514552968/thumb_image_not_available_dqr7h2.png",
              "id": 1,
              "ingredients": Array [
                "water, salt",
              ],
              "name": "How to cook yam",
              "reactionDown": Array [],
              "reactionUp": Array [],
              "searchIng": "water, salt",
              "updatedAt": "2018-03-14T18:21:16.794Z",
              "upvote": 0,
              "userId": 1,
              "views": 0,
            },
            "success": true,
          }
        }
      />
      <i
        aria-hidden="true"
        className="fa fa-trash fa-2x text-danger hvr-buzz-out rounded-circle"
        data-target="#deleteModal"
        data-tip="Delete recipe"
        data-toggle="modal"
        id="floating-delete"
        onClick={[Function]}
      />
      <i
        aria-hidden="true"
        className="text-info fa fa-pencil fa-2x rounded-circle"
        data-tip="Edit recipe"
        id="floating-edit"
        onClick={[Function]}
      />
    </div>
    <Connect(Reviews) />
  </section>
</div>
`;

exports[`Test suite for recipe detail page Render component with complete props should edit a recipe and submit 1`] = `
<div>
  <Connect(Navbar)
    className="bg-dark fixed-top"
  />
  <ToastContainer
    autoClose={5000}
    bodyClassName=""
    className={null}
    closeButton={<DefaultCloseButton />}
    closeOnClick={true}
    hideProgressBar={false}
    newestOnTop={false}
    pauseOnHover={true}
    position="top-right"
    progressClassName=""
    style={null}
    toastClassName=""
    transition={[Function]}
  />
  <DeleteModal
    confirmDelete={[Function]}
  />
  <section
    className="container mt-80"
    data-aos="fade-up"
    data-duration="800"
  >
    <div
      className="row justify-content-center catalog-wrapper mb-20"
      id="catalog"
    >
      <div
        className="col-lg-6 col-md-6 col-sm-8  mb-5 recipe-image"
      >
        <GenerateRecipeItem
          auth={
            Object {
              "allUsers": Object {
                "success": true,
                "users": Array [
                  Object {
                    "avatar": null,
                    "bio": null,
                    "country": null,
                    "createdAt": "2018-03-13T05:04:37.443Z",
                    "email": "emasysnd@gmail.com",
                    "firstName": null,
                    "id": 1,
                    "lastName": null,
                    "moniker": "admin",
                    "password": "$2a$10$47oncNYPerLpBX2BfrUSpeUo4KMIU5dsHkJo3hRUWw1n58K6muoUS",
                    "updatedAt": "2018-03-13T05:04:37.443Z",
                  },
                ],
              },
              "authInfo": Object {
                "isLoggedIn": true,
                "userId": 1,
                "username": "admin",
              },
              "isLoggedIn": true,
              "message": null,
              "userInfo": Object {
                "data": Object {
                  "avatar": null,
                  "bio": null,
                  "country": "Nigeria",
                  "email": "emasysnd@gmail.com",
                  "firstName": "emmy",
                  "id": 1,
                  "lastName": "endy",
                  "moniker": "admin",
                },
                "success": true,
              },
              "userProfile": Object {
                "data": Object {
                  "avatar": null,
                  "bio": null,
                  "country": null,
                  "email": "emasysnd@gmail.com",
                  "firstName": null,
                  "id": 1,
                  "lastName": null,
                  "moniker": "admin",
                },
                "success": true,
              },
            }
          }
          downvote={[Function]}
          favIt={[Function]}
          foodImg="https://res.cloudinary.com/emasys/image/upload/v1514552968/thumb_image_not_available_dqr7h2.png"
          handleDrop={[Function]}
          handleImg={[Function]}
          hoverIn={[Function]}
          hoverOut={[Function]}
          reactionDown={Array []}
          reactionUp={Array []}
          state={
            Object {
              "authInfo": Object {
                "isLoggedIn": true,
                "userId": 1,
                "username": "admin",
              },
              "category": "Lunch",
              "deleteRecipe": false,
              "description": "just do it",
              "direction": "just do it",
              "downvoteStatus": false,
              "edit": true,
              "editRecipeItem": true,
              "error": "d-none",
              "favoriteStatus": false,
              "fetchRecipe": true,
              "files": null,
              "foodImg": "https://res.cloudinary.com/emasys/image/upload/v1514552968/thumb_image_not_available_dqr7h2.png",
              "ingredients": "water, salt",
              "name": "How to cook yam",
              "preview": null,
              "recipeItem": Object {
                "recipe": Object {
                  "category": "Lunch",
                  "comments": 0,
                  "createdAt": "2018-03-13T05:05:02.553Z",
                  "description": "just do it",
                  "direction": "just do it",
                  "downvote": 0,
                  "favorite": 0,
                  "favorites": Array [],
                  "foodImg": "https://res.cloudinary.com/emasys/image/upload/v1514552968/thumb_image_not_available_dqr7h2.png",
                  "id": 1,
                  "ingredients": Array [
                    "water, salt",
                  ],
                  "name": "How to cook yam",
                  "reactionDown": Array [],
                  "reactionUp": Array [],
                  "searchIng": "water, salt",
                  "updatedAt": "2018-03-14T18:21:16.794Z",
                  "upvote": 0,
                  "userId": 1,
                  "views": 0,
                },
                "success": true,
              },
              "save": "d-none",
              "status": "show",
              "upvoteStatus": false,
            }
          }
          upvote={[Function]}
        />
      </div>
      <EditForm
        goBack={[Function]}
        handleSubmit={[Function]}
        state={
          Object {
            "authInfo": Object {
              "isLoggedIn": true,
              "userId": 1,
              "username": "admin",
            },
            "category": "Lunch",
            "deleteRecipe": false,
            "description": "just do it",
            "direction": "just do it",
            "downvoteStatus": false,
            "edit": true,
            "editRecipeItem": true,
            "error": "d-none",
            "favoriteStatus": false,
            "fetchRecipe": true,
            "files": null,
            "foodImg": "https://res.cloudinary.com/emasys/image/upload/v1514552968/thumb_image_not_available_dqr7h2.png",
            "ingredients": "water, salt",
            "name": "How to cook yam",
            "preview": null,
            "recipeItem": Object {
              "recipe": Object {
                "category": "Lunch",
                "comments": 0,
                "createdAt": "2018-03-13T05:05:02.553Z",
                "description": "just do it",
                "direction": "just do it",
                "downvote": 0,
                "favorite": 0,
                "favorites": Array [],
                "foodImg": "https://res.cloudinary.com/emasys/image/upload/v1514552968/thumb_image_not_available_dqr7h2.png",
                "id": 1,
                "ingredients": Array [
                  "water, salt",
                ],
                "name": "How to cook yam",
                "reactionDown": Array [],
                "reactionUp": Array [],
                "searchIng": "water, salt",
                "updatedAt": "2018-03-14T18:21:16.794Z",
                "upvote": 0,
                "userId": 1,
                "views": 0,
              },
              "success": true,
            },
            "save": "d-none",
            "status": "show",
            "upvoteStatus": false,
          }
        }
      />
      <i
        aria-hidden="true"
        className="fa fa-trash fa-2x text-danger hvr-buzz-out rounded-circle"
        data-target="#deleteModal"
        data-tip="Delete recipe"
        data-toggle="modal"
        id="floating-delete"
        onClick={[Function]}
      />
      <i
        aria-hidden="true"
        className="text-info fa fa-pencil fa-2x rounded-circle"
        data-tip="Edit recipe"
        id="floating-edit"
        onClick={[Function]}
      />
    </div>
    <Connect(Reviews) />
  </section>
</div>
`;

exports[`Test suite for recipe detail page Render component with complete props should match snapshot 1`] = `
<MockRouter
  createHref={[Function]}
  location=""
  params={Object {}}
  path=""
  push={[Function]}
  replace={[Function]}
  url=""
>
  <RecipeItem
    auth={
      Object {
        "allUsers": Object {
          "success": true,
          "users": Array [
            Object {
              "avatar": null,
              "bio": null,
              "country": null,
              "createdAt": "2018-03-13T05:04:37.443Z",
              "email": "emasysnd@gmail.com",
              "firstName": null,
              "id": 1,
              "lastName": null,
              "moniker": "admin",
              "password": "$2a$10$47oncNYPerLpBX2BfrUSpeUo4KMIU5dsHkJo3hRUWw1n58K6muoUS",
              "updatedAt": "2018-03-13T05:04:37.443Z",
            },
          ],
        },
        "authInfo": Object {
          "isLoggedIn": true,
          "userId": 1,
          "username": "admin",
        },
        "isLoggedIn": true,
        "message": null,
        "userInfo": Object {
          "data": Object {
            "avatar": null,
            "bio": null,
            "country": "Nigeria",
            "email": "emasysnd@gmail.com",
            "firstName": "emmy",
            "id": 1,
            "lastName": "endy",
            "moniker": "admin",
          },
          "success": true,
        },
        "userProfile": Object {
          "data": Object {
            "avatar": null,
            "bio": null,
            "country": null,
            "email": "emasysnd@gmail.com",
            "firstName": null,
            "id": 1,
            "lastName": null,
            "moniker": "admin",
          },
          "success": true,
        },
      }
    }
    clearRecipes={[Function]}
    delRecipe={[Function]}
    downvote={[Function]}
    editRecipe={[Function]}
    getRecipeItem={[Function]}
    getRecipeReactions={[Function]}
    history={
      Object {
        "push": [Function],
      }
    }
    match={
      Object {
        "params": Object {
          "id": 1,
        },
      }
    }
    recipes={
      Object {
        "allRecipes": Array [],
        "category": Array [
          Object {
            "category": "Lunch",
            "comments": 0,
            "createdAt": "2018-03-13T05:05:02.553Z",
            "description": "Normal food",
            "direction": "Just do it",
            "downvote": 0,
            "favorite": 0,
            "foodImg": "https://res.cloudinary.com/emasys/image/upload/v1514552968/thumb_image_not_available_dqr7h2.png",
            "id": 1,
            "ingredients": Array [
              "water, salt",
            ],
            "name": "A really long recipe title to make sure the words are truncated",
            "reactionDown": Array [],
            "reactionUp": Array [],
            "searchIng": "water, salt",
            "updatedAt": "2018-03-13T05:12:41.611Z",
            "upvote": 0,
            "userId": 1,
            "views": 0,
          },
        ],
        "count": 1,
        "hotRecipes": Array [
          Object {
            "category": "Lunch",
            "comments": 0,
            "createdAt": "2018-03-13T05:05:02.553Z",
            "description": "Normal food",
            "direction": "Just do it",
            "downvote": 0,
            "favorite": 0,
            "foodImg": "https://res.cloudinary.com/emasys/image/upload/v1514552968/thumb_image_not_available_dqr7h2.png",
            "id": 1,
            "ingredients": Array [
              "water, salt",
            ],
            "name": "A really long recipe title to make sure the words are truncated",
            "reactionDown": Array [],
            "reactionUp": Array [],
            "searchIng": "water, salt",
            "updatedAt": "2018-03-13T05:12:41.611Z",
            "upvote": 0,
            "userId": 1,
            "views": 0,
          },
        ],
        "recipeItem": Object {
          "recipe": Object {
            "category": "Lunch",
            "comments": 0,
            "createdAt": "2018-03-13T05:05:02.553Z",
            "description": "just do it",
            "direction": "just do it",
            "downvote": 0,
            "favorite": 0,
            "favorites": Array [],
            "foodImg": "https://res.cloudinary.com/emasys/image/upload/v1514552968/thumb_image_not_available_dqr7h2.png",
            "id": 1,
            "ingredients": Array [
              "water, salt",
            ],
            "name": "How to cook yam",
            "reactionDown": Array [],
            "reactionUp": Array [],
            "searchIng": "water, salt",
            "updatedAt": "2018-03-14T18:21:16.794Z",
            "upvote": 0,
            "userId": 1,
            "views": 0,
          },
          "success": true,
        },
        "searchResult": Array [],
        "updated": false,
        "userRecipes": Array [],
        "userRecipesCount": 0,
      }
    }
    setFavorite={[Function]}
    uploadImg={[Function]}
    upvote={[Function]}
    userInfo={
      Object {
        "data": Object {
          "avatar": null,
          "bio": null,
          "country": "Nigeria",
          "email": "emasysnd@gmail.com",
          "firstName": "emmy",
          "id": 1,
          "lastName": "endy",
          "moniker": "admin",
        },
        "success": true,
      }
    }
  >
    <div>
      <Connect(Navbar)
        className="bg-dark fixed-top"
      />
      <ToastContainer
        autoClose={5000}
        bodyClassName=""
        className={null}
        closeButton={<DefaultCloseButton />}
        closeOnClick={true}
        hideProgressBar={false}
        newestOnTop={false}
        pauseOnHover={true}
        position="top-right"
        progressClassName=""
        style={null}
        toastClassName=""
        transition={[Function]}
      >
        <div />
      </ToastContainer>
      <DeleteModal
        confirmDelete={[Function]}
      >
        <div
          aria-hidden="true"
          aria-labelledby="deleteModalTitle"
          className="modal fade"
          id="deleteModal"
          role="dialog"
          tabIndex="-1"
        >
          <div
            className="modal-dialog modal-dialog-centered"
            role="document"
          >
            <div
              className="modal-content"
            >
              <div
                className="modal-header"
              >
                <h5
                  className="modal-title"
                  id="exampleModalLongTitle"
                >
                  Delete Item
                </h5>
                <button
                  aria-label="Close"
                  className="close"
                  data-dismiss="modal"
                  type="button"
                >
                  <span
                    aria-hidden="true"
                  >
                    ×
                  </span>
                </button>
              </div>
              <div
                className="modal-body"
              >
                Are you sure you want to continue with this action?
              </div>
              <div
                className="modal-footer"
              >
                <button
                  className="btn btn-secondary btn-lg"
                  data-dismiss="modal"
                  type="button"
                >
                  No
                </button>
                <button
                  className="btn btn-danger btn-lg"
                  data-dismiss="modal"
                  id="confirmDelete"
                  onClick={[Function]}
                  type="button"
                >
                  Yes
                </button>
              </div>
            </div>
          </div>
        </div>
      </DeleteModal>
      <section
        className="container mt-80"
        data-aos="fade-up"
        data-duration="800"
      >
        <div
          className="row justify-content-center catalog-wrapper mb-20"
          id="catalog"
        >
          <div
            className="col-lg-6 col-md-6 col-sm-8  mb-5 recipe-image"
          >
            <GenerateRecipeItem
              auth={
                Object {
                  "allUsers": Object {
                    "success": true,
                    "users": Array [
                      Object {
                        "avatar": null,
                        "bio": null,
                        "country": null,
                        "createdAt": "2018-03-13T05:04:37.443Z",
                        "email": "emasysnd@gmail.com",
                        "firstName": null,
                        "id": 1,
                        "lastName": null,
                        "moniker": "admin",
                        "password": "$2a$10$47oncNYPerLpBX2BfrUSpeUo4KMIU5dsHkJo3hRUWw1n58K6muoUS",
                        "updatedAt": "2018-03-13T05:04:37.443Z",
                      },
                    ],
                  },
                  "authInfo": Object {
                    "isLoggedIn": true,
                    "userId": 1,
                    "username": "admin",
                  },
                  "isLoggedIn": true,
                  "message": null,
                  "userInfo": Object {
                    "data": Object {
                      "avatar": null,
                      "bio": null,
                      "country": "Nigeria",
                      "email": "emasysnd@gmail.com",
                      "firstName": "emmy",
                      "id": 1,
                      "lastName": "endy",
                      "moniker": "admin",
                    },
                    "success": true,
                  },
                  "userProfile": Object {
                    "data": Object {
                      "avatar": null,
                      "bio": null,
                      "country": null,
                      "email": "emasysnd@gmail.com",
                      "firstName": null,
                      "id": 1,
                      "lastName": null,
                      "moniker": "admin",
                    },
                    "success": true,
                  },
                }
              }
              downvote={[Function]}
              favIt={[Function]}
              foodImg="https://res.cloudinary.com/emasys/image/upload/v1514552968/thumb_image_not_available_dqr7h2.png"
              handleDrop={[Function]}
              handleImg={[Function]}
              hoverIn={[Function]}
              hoverOut={[Function]}
              reactionDown={Array []}
              reactionUp={Array []}
              state={
                Object {
                  "authInfo": Object {},
                  "deleteRecipe": false,
                  "description": "",
                  "direction": "",
                  "downvoteStatus": false,
                  "edit": false,
                  "editRecipeItem": false,
                  "error": "d-none",
                  "favoriteStatus": false,
                  "fetchRecipe": false,
                  "files": null,
                  "ingredients": "",
                  "name": "",
                  "preview": null,
                  "recipeItem": Object {
                    "recipe": Object {
                      "category": "Lunch",
                      "comments": 0,
                      "createdAt": "2018-03-13T05:05:02.553Z",
                      "description": "just do it",
                      "direction": "just do it",
                      "downvote": 0,
                      "favorite": 0,
                      "favorites": Array [],
                      "foodImg": "https://res.cloudinary.com/emasys/image/upload/v1514552968/thumb_image_not_available_dqr7h2.png",
                      "id": 1,
                      "ingredients": Array [
                        "water, salt",
                      ],
                      "name": "How to cook yam",
                      "reactionDown": Array [],
                      "reactionUp": Array [],
                      "searchIng": "water, salt",
                      "updatedAt": "2018-03-14T18:21:16.794Z",
                      "upvote": 0,
                      "userId": 1,
                      "views": 0,
                    },
                    "success": true,
                  },
                  "save": "d-none",
                  "status": "fade",
                  "upvoteStatus": false,
                }
              }
              upvote={[Function]}
            >
              <div
                className="mb-20"
              >
                <div>
                  <button
                    className="btn btn-success mb-5 d-none"
                    id="upload-image-btn"
                    onClick={[Function]}
                  >
                    Upload Image
                  </button>
                </div>
                <figure
                  className="img-wrapper"
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                >
                  <img
                    alt="foodie"
                    className="img-fluid rounded recipeImage"
                    src="https://res.cloudinary.com/emasys/image/upload/v1514552968/thumb_image_not_available_dqr7h2.png"
                  />
                </figure>
                <div
                  className="d-inline mt-3 reaction-pane justify-content-center"
                >
                  <span
                    className="text-center card-link"
                    onClick={[Function]}
                  >
                    <i
                      className="material-icons hovered gray"
                      data-tip="Add to favorites"
                      id="favorite-recipe"
                    >
                      
                    </i>
                    <em
                      className="bold"
                    >
                      0
                    </em>
                  </span>
                  <span
                    className="text-center card-link mr-1"
                    onClick={[Function]}
                  >
                    <i
                      aria-hidden="true"
                      className="material-icons  gray fa-2x"
                      data-tip="upvote"
                      id="like"
                    >
                      
                    </i>
                    <em
                      className=""
                    >
                      0
                    </em>
                  </span>
                  <span
                    className="text-center card-link mr-1"
                    onClick={[Function]}
                  >
                    <i
                      aria-hidden="true"
                      className="material-icons  gray"
                      data-tip="Downvote"
                      id="dislike"
                    >
                      
                    </i>
                    <em
                      style={
                        Object {
                          "verticalAlign": "middle",
                        }
                      }
                    >
                      0
                    </em>
                  </span>
                  <span
                    className="text-center card-link m-1"
                  >
                    <i
                      className="material-icons gray"
                      data-tip="Views"
                    >
                      
                    </i>
                    <em>
                      0
                    </em>
                  </span>
                  <ReactTooltip
                    effect="float"
                    insecure={true}
                    place="bottom"
                    resizeHide={true}
                    type="dark"
                    wrapper="div"
                  >
                    <div
                      className="__react_component_tooltip place-top type-dark "
                      data-id="tooltip"
                    />
                  </ReactTooltip>
                </div>
                <hr />
                <span
                  className="labels float-right px-1"
                >
                  <i
                    className="material-icons gray"
                  >
                    
                  </i>
                  <Link
                    className=" text-dark rounded "
                    data-tip="Category"
                    replace={false}
                    to="/category/lunch"
                  >
                    <a
                      className=" text-dark rounded "
                      data-tip="Category"
                      onClick={[Function]}
                    >
                      Lunch
                    </a>
                  </Link>
                </span>
              </div>
            </GenerateRecipeItem>
          </div>
          <Ingredients
            data={
              Object {
                "data": Object {
                  "avatar": null,
                  "bio": null,
                  "country": "Nigeria",
                  "email": "emasysnd@gmail.com",
                  "firstName": "emmy",
                  "id": 1,
                  "lastName": "endy",
                  "moniker": "admin",
                },
                "success": true,
              }
            }
            ingredients={
              Object {
                "recipe": Object {
                  "category": "Lunch",
                  "comments": 0,
                  "createdAt": "2018-03-13T05:05:02.553Z",
                  "description": "just do it",
                  "direction": "just do it",
                  "downvote": 0,
                  "favorite": 0,
                  "favorites": Array [],
                  "foodImg": "https://res.cloudinary.com/emasys/image/upload/v1514552968/thumb_image_not_available_dqr7h2.png",
                  "id": 1,
                  "ingredients": Array [
                    "water, salt",
                  ],
                  "name": "How to cook yam",
                  "reactionDown": Array [],
                  "reactionUp": Array [],
                  "searchIng": "water, salt",
                  "updatedAt": "2018-03-14T18:21:16.794Z",
                  "upvote": 0,
                  "userId": 1,
                  "views": 0,
                },
                "success": true,
              }
            }
          >
            <div
              className="col-lg-5 col-sm-12"
            >
              <h2
                className="wrapWord text-capitalize"
              >
                How to cook yam
              </h2>
              <small
                className="text-capitalize"
              >
                A recipe by
                 
                <Link
                  className=" bolder text-info"
                  replace={false}
                  to="/user/1"
                >
                  <a
                    className=" bolder text-info"
                    onClick={[Function]}
                  >
                    admin
                  </a>
                </Link>
              </small>
               
              <br />
              <small
                className=""
              >
                Posted on:
                 
                Mar 13th 2018
              </small>
              <hr />
              <h5
                className="text-muted"
              >
                Description
              </h5>
              <div
                className="pb-3 "
              >
                <div
                  className="bg-light direction rounded p-15"
                >
                  just do it
                </div>
              </div>
              <hr />
              <h5
                className="text-muted"
              >
                Ingredients
              </h5>
              <hr />
              <div
                className="pb-3"
              >
                <ul
                  className="list-group wrapWord"
                >
                  <a
                    className="list-group-item text-capitalize list-group-item-action"
                    href="https://en.wikipedia.org/wiki/water, salt"
                    key="water, salt"
                    target="_blank"
                  >
                    water, salt
                  </a>
                </ul>
              </div>
              <h5
                className="text-muted"
              >
                Directions
              </h5>
              <hr />
              <div
                className="p-10 direction rounded  bg-light"
              >
                just do it
              </div>
            </div>
          </Ingredients>
        </div>
        <Connect(Reviews) />
      </section>
    </div>
  </RecipeItem>
</MockRouter>
`;

exports[`Test suite for recipe detail page Render component with complete props should simulate click on all the reaction buttons 1`] = `
<MockRouter
  createHref={[Function]}
  location=""
  params={Object {}}
  path=""
  push={[Function]}
  replace={[Function]}
  url=""
>
  <RecipeItem
    auth={
      Object {
        "allUsers": Object {
          "success": true,
          "users": Array [
            Object {
              "avatar": null,
              "bio": null,
              "country": null,
              "createdAt": "2018-03-13T05:04:37.443Z",
              "email": "emasysnd@gmail.com",
              "firstName": null,
              "id": 1,
              "lastName": null,
              "moniker": "admin",
              "password": "$2a$10$47oncNYPerLpBX2BfrUSpeUo4KMIU5dsHkJo3hRUWw1n58K6muoUS",
              "updatedAt": "2018-03-13T05:04:37.443Z",
            },
          ],
        },
        "authInfo": Object {
          "isLoggedIn": true,
          "userId": 1,
          "username": "admin",
        },
        "isLoggedIn": true,
        "message": null,
        "userInfo": Object {
          "data": Object {
            "avatar": null,
            "bio": null,
            "country": "Nigeria",
            "email": "emasysnd@gmail.com",
            "firstName": "emmy",
            "id": 1,
            "lastName": "endy",
            "moniker": "admin",
          },
          "success": true,
        },
        "userProfile": Object {
          "data": Object {
            "avatar": null,
            "bio": null,
            "country": null,
            "email": "emasysnd@gmail.com",
            "firstName": null,
            "id": 1,
            "lastName": null,
            "moniker": "admin",
          },
          "success": true,
        },
      }
    }
    clearRecipes={[Function]}
    delRecipe={[Function]}
    downvote={[Function]}
    editRecipe={[Function]}
    getRecipeItem={[Function]}
    getRecipeReactions={[Function]}
    history={
      Object {
        "push": [Function],
      }
    }
    match={
      Object {
        "params": Object {
          "id": 1,
        },
      }
    }
    recipes={
      Object {
        "allRecipes": Array [],
        "category": Array [
          Object {
            "category": "Lunch",
            "comments": 0,
            "createdAt": "2018-03-13T05:05:02.553Z",
            "description": "Normal food",
            "direction": "Just do it",
            "downvote": 0,
            "favorite": 0,
            "foodImg": "https://res.cloudinary.com/emasys/image/upload/v1514552968/thumb_image_not_available_dqr7h2.png",
            "id": 1,
            "ingredients": Array [
              "water, salt",
            ],
            "name": "A really long recipe title to make sure the words are truncated",
            "reactionDown": Array [],
            "reactionUp": Array [],
            "searchIng": "water, salt",
            "updatedAt": "2018-03-13T05:12:41.611Z",
            "upvote": 0,
            "userId": 1,
            "views": 0,
          },
        ],
        "count": 1,
        "hotRecipes": Array [
          Object {
            "category": "Lunch",
            "comments": 0,
            "createdAt": "2018-03-13T05:05:02.553Z",
            "description": "Normal food",
            "direction": "Just do it",
            "downvote": 0,
            "favorite": 0,
            "foodImg": "https://res.cloudinary.com/emasys/image/upload/v1514552968/thumb_image_not_available_dqr7h2.png",
            "id": 1,
            "ingredients": Array [
              "water, salt",
            ],
            "name": "A really long recipe title to make sure the words are truncated",
            "reactionDown": Array [],
            "reactionUp": Array [],
            "searchIng": "water, salt",
            "updatedAt": "2018-03-13T05:12:41.611Z",
            "upvote": 0,
            "userId": 1,
            "views": 0,
          },
        ],
        "recipeItem": Object {
          "recipe": Object {
            "category": "Lunch",
            "comments": 0,
            "createdAt": "2018-03-13T05:05:02.553Z",
            "description": "just do it",
            "direction": "just do it",
            "downvote": 0,
            "favorite": 0,
            "favorites": Array [],
            "foodImg": "https://res.cloudinary.com/emasys/image/upload/v1514552968/thumb_image_not_available_dqr7h2.png",
            "id": 1,
            "ingredients": Array [
              "water, salt",
            ],
            "name": "How to cook yam",
            "reactionDown": Array [],
            "reactionUp": Array [],
            "searchIng": "water, salt",
            "updatedAt": "2018-03-14T18:21:16.794Z",
            "upvote": 0,
            "userId": 1,
            "views": 0,
          },
          "success": true,
        },
        "searchResult": Array [],
        "updated": false,
        "userRecipes": Array [],
        "userRecipesCount": 0,
      }
    }
    setFavorite={[Function]}
    uploadImg={[Function]}
    upvote={[Function]}
    userInfo={
      Object {
        "data": Object {
          "avatar": null,
          "bio": null,
          "country": "Nigeria",
          "email": "emasysnd@gmail.com",
          "firstName": "emmy",
          "id": 1,
          "lastName": "endy",
          "moniker": "admin",
        },
        "success": true,
      }
    }
  >
    <div>
      <Connect(Navbar)
        className="bg-dark fixed-top"
      />
      <ToastContainer
        autoClose={5000}
        bodyClassName=""
        className={null}
        closeButton={<DefaultCloseButton />}
        closeOnClick={true}
        hideProgressBar={false}
        newestOnTop={false}
        pauseOnHover={true}
        position="top-right"
        progressClassName=""
        style={null}
        toastClassName=""
        transition={[Function]}
      >
        <div />
      </ToastContainer>
      <DeleteModal
        confirmDelete={[Function]}
      >
        <div
          aria-hidden="true"
          aria-labelledby="deleteModalTitle"
          className="modal fade"
          id="deleteModal"
          role="dialog"
          tabIndex="-1"
        >
          <div
            className="modal-dialog modal-dialog-centered"
            role="document"
          >
            <div
              className="modal-content"
            >
              <div
                className="modal-header"
              >
                <h5
                  className="modal-title"
                  id="exampleModalLongTitle"
                >
                  Delete Item
                </h5>
                <button
                  aria-label="Close"
                  className="close"
                  data-dismiss="modal"
                  type="button"
                >
                  <span
                    aria-hidden="true"
                  >
                    ×
                  </span>
                </button>
              </div>
              <div
                className="modal-body"
              >
                Are you sure you want to continue with this action?
              </div>
              <div
                className="modal-footer"
              >
                <button
                  className="btn btn-secondary btn-lg"
                  data-dismiss="modal"
                  type="button"
                >
                  No
                </button>
                <button
                  className="btn btn-danger btn-lg"
                  data-dismiss="modal"
                  id="confirmDelete"
                  onClick={[Function]}
                  type="button"
                >
                  Yes
                </button>
              </div>
            </div>
          </div>
        </div>
      </DeleteModal>
      <section
        className="container mt-80"
        data-aos="fade-up"
        data-duration="800"
      >
        <div
          className="row justify-content-center catalog-wrapper mb-20"
          id="catalog"
        >
          <div
            className="col-lg-6 col-md-6 col-sm-8  mb-5 recipe-image"
          >
            <GenerateRecipeItem
              auth={
                Object {
                  "allUsers": Object {
                    "success": true,
                    "users": Array [
                      Object {
                        "avatar": null,
                        "bio": null,
                        "country": null,
                        "createdAt": "2018-03-13T05:04:37.443Z",
                        "email": "emasysnd@gmail.com",
                        "firstName": null,
                        "id": 1,
                        "lastName": null,
                        "moniker": "admin",
                        "password": "$2a$10$47oncNYPerLpBX2BfrUSpeUo4KMIU5dsHkJo3hRUWw1n58K6muoUS",
                        "updatedAt": "2018-03-13T05:04:37.443Z",
                      },
                    ],
                  },
                  "authInfo": Object {
                    "isLoggedIn": true,
                    "userId": 1,
                    "username": "admin",
                  },
                  "isLoggedIn": true,
                  "message": null,
                  "userInfo": Object {
                    "data": Object {
                      "avatar": null,
                      "bio": null,
                      "country": "Nigeria",
                      "email": "emasysnd@gmail.com",
                      "firstName": "emmy",
                      "id": 1,
                      "lastName": "endy",
                      "moniker": "admin",
                    },
                    "success": true,
                  },
                  "userProfile": Object {
                    "data": Object {
                      "avatar": null,
                      "bio": null,
                      "country": null,
                      "email": "emasysnd@gmail.com",
                      "firstName": null,
                      "id": 1,
                      "lastName": null,
                      "moniker": "admin",
                    },
                    "success": true,
                  },
                }
              }
              downvote={[Function]}
              favIt={[Function]}
              foodImg="https://res.cloudinary.com/emasys/image/upload/v1514552968/thumb_image_not_available_dqr7h2.png"
              handleDrop={[Function]}
              handleImg={[Function]}
              hoverIn={[Function]}
              hoverOut={[Function]}
              reactionDown={Array []}
              reactionUp={Array []}
              state={
                Object {
                  "authInfo": Object {},
                  "deleteRecipe": false,
                  "description": "",
                  "direction": "",
                  "downvoteStatus": false,
                  "edit": false,
                  "editRecipeItem": false,
                  "error": "d-none",
                  "favoriteStatus": false,
                  "fetchRecipe": false,
                  "files": null,
                  "ingredients": "",
                  "name": "",
                  "preview": null,
                  "recipeItem": Object {
                    "recipe": Object {
                      "category": "Lunch",
                      "comments": 0,
                      "createdAt": "2018-03-13T05:05:02.553Z",
                      "description": "just do it",
                      "direction": "just do it",
                      "downvote": 0,
                      "favorite": 0,
                      "favorites": Array [],
                      "foodImg": "https://res.cloudinary.com/emasys/image/upload/v1514552968/thumb_image_not_available_dqr7h2.png",
                      "id": 1,
                      "ingredients": Array [
                        "water, salt",
                      ],
                      "name": "How to cook yam",
                      "reactionDown": Array [],
                      "reactionUp": Array [],
                      "searchIng": "water, salt",
                      "updatedAt": "2018-03-14T18:21:16.794Z",
                      "upvote": 0,
                      "userId": 1,
                      "views": 0,
                    },
                    "success": true,
                  },
                  "save": "d-none",
                  "status": "fade",
                  "upvoteStatus": false,
                }
              }
              upvote={[Function]}
            >
              <div
                className="mb-20"
              >
                <div>
                  <button
                    className="btn btn-success mb-5 d-none"
                    id="upload-image-btn"
                    onClick={[Function]}
                  >
                    Upload Image
                  </button>
                </div>
                <figure
                  className="img-wrapper"
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                >
                  <img
                    alt="foodie"
                    className="img-fluid rounded recipeImage"
                    src="https://res.cloudinary.com/emasys/image/upload/v1514552968/thumb_image_not_available_dqr7h2.png"
                  />
                </figure>
                <div
                  className="d-inline mt-3 reaction-pane justify-content-center"
                >
                  <span
                    className="text-center card-link"
                    onClick={[Function]}
                  >
                    <i
                      className="material-icons hovered gray"
                      data-tip="Add to favorites"
                      id="favorite-recipe"
                    >
                      
                    </i>
                    <em
                      className="bold"
                    >
                      0
                    </em>
                  </span>
                  <span
                    className="text-center card-link mr-1"
                    onClick={[Function]}
                  >
                    <i
                      aria-hidden="true"
                      className="material-icons  gray fa-2x"
                      data-tip="upvote"
                      id="like"
                    >
                      
                    </i>
                    <em
                      className=""
                    >
                      0
                    </em>
                  </span>
                  <span
                    className="text-center card-link mr-1"
                    onClick={[Function]}
                  >
                    <i
                      aria-hidden="true"
                      className="material-icons  gray"
                      data-tip="Downvote"
                      id="dislike"
                    >
                      
                    </i>
                    <em
                      style={
                        Object {
                          "verticalAlign": "middle",
                        }
                      }
                    >
                      0
                    </em>
                  </span>
                  <span
                    className="text-center card-link m-1"
                  >
                    <i
                      className="material-icons gray"
                      data-tip="Views"
                    >
                      
                    </i>
                    <em>
                      0
                    </em>
                  </span>
                  <ReactTooltip
                    effect="float"
                    insecure={true}
                    place="bottom"
                    resizeHide={true}
                    type="dark"
                    wrapper="div"
                  >
                    <div
                      className="__react_component_tooltip place-top type-dark "
                      data-id="tooltip"
                    />
                  </ReactTooltip>
                </div>
                <hr />
                <span
                  className="labels float-right px-1"
                >
                  <i
                    className="material-icons gray"
                  >
                    
                  </i>
                  <Link
                    className=" text-dark rounded "
                    data-tip="Category"
                    replace={false}
                    to="/category/lunch"
                  >
                    <a
                      className=" text-dark rounded "
                      data-tip="Category"
                      onClick={[Function]}
                    >
                      Lunch
                    </a>
                  </Link>
                </span>
              </div>
            </GenerateRecipeItem>
          </div>
          <Ingredients
            data={
              Object {
                "data": Object {
                  "avatar": null,
                  "bio": null,
                  "country": "Nigeria",
                  "email": "emasysnd@gmail.com",
                  "firstName": "emmy",
                  "id": 1,
                  "lastName": "endy",
                  "moniker": "admin",
                },
                "success": true,
              }
            }
            ingredients={
              Object {
                "recipe": Object {
                  "category": "Lunch",
                  "comments": 0,
                  "createdAt": "2018-03-13T05:05:02.553Z",
                  "description": "just do it",
                  "direction": "just do it",
                  "downvote": 0,
                  "favorite": 0,
                  "favorites": Array [],
                  "foodImg": "https://res.cloudinary.com/emasys/image/upload/v1514552968/thumb_image_not_available_dqr7h2.png",
                  "id": 1,
                  "ingredients": Array [
                    "water, salt",
                  ],
                  "name": "How to cook yam",
                  "reactionDown": Array [],
                  "reactionUp": Array [],
                  "searchIng": "water, salt",
                  "updatedAt": "2018-03-14T18:21:16.794Z",
                  "upvote": 0,
                  "userId": 1,
                  "views": 0,
                },
                "success": true,
              }
            }
          >
            <div
              className="col-lg-5 col-sm-12"
            >
              <h2
                className="wrapWord text-capitalize"
              >
                How to cook yam
              </h2>
              <small
                className="text-capitalize"
              >
                A recipe by
                 
                <Link
                  className=" bolder text-info"
                  replace={false}
                  to="/user/1"
                >
                  <a
                    className=" bolder text-info"
                    onClick={[Function]}
                  >
                    admin
                  </a>
                </Link>
              </small>
               
              <br />
              <small
                className=""
              >
                Posted on:
                 
                Mar 13th 2018
              </small>
              <hr />
              <h5
                className="text-muted"
              >
                Description
              </h5>
              <div
                className="pb-3 "
              >
                <div
                  className="bg-light direction rounded p-15"
                >
                  just do it
                </div>
              </div>
              <hr />
              <h5
                className="text-muted"
              >
                Ingredients
              </h5>
              <hr />
              <div
                className="pb-3"
              >
                <ul
                  className="list-group wrapWord"
                >
                  <a
                    className="list-group-item text-capitalize list-group-item-action"
                    href="https://en.wikipedia.org/wiki/water, salt"
                    key="water, salt"
                    target="_blank"
                  >
                    water, salt
                  </a>
                </ul>
              </div>
              <h5
                className="text-muted"
              >
                Directions
              </h5>
              <hr />
              <div
                className="p-10 direction rounded  bg-light"
              >
                just do it
              </div>
            </div>
          </Ingredients>
        </div>
        <Connect(Reviews) />
      </section>
    </div>
  </RecipeItem>
</MockRouter>
`;

exports[`Test suite for recipe detail page Render component with incomplete props should match snapshot 1`] = `
<MockRouter
  createHref={[Function]}
  location=""
  params={Object {}}
  path=""
  push={[Function]}
  replace={[Function]}
  url=""
>
  <RecipeItem
    auth={
      Object {
        "allUsers": Object {
          "success": true,
          "users": Array [
            Object {
              "avatar": null,
              "bio": null,
              "country": null,
              "createdAt": "2018-03-13T05:04:37.443Z",
              "email": "emasysnd@gmail.com",
              "firstName": null,
              "id": 1,
              "lastName": null,
              "moniker": "admin",
              "password": "$2a$10$47oncNYPerLpBX2BfrUSpeUo4KMIU5dsHkJo3hRUWw1n58K6muoUS",
              "updatedAt": "2018-03-13T05:04:37.443Z",
            },
          ],
        },
        "authInfo": Object {
          "isLoggedIn": true,
          "userId": 1,
          "username": "admin",
        },
        "isLoggedIn": true,
        "message": null,
        "userInfo": Object {
          "data": Object {
            "avatar": null,
            "bio": null,
            "country": "Nigeria",
            "email": "emasysnd@gmail.com",
            "firstName": "emmy",
            "id": 1,
            "lastName": "endy",
            "moniker": "admin",
          },
          "success": true,
        },
        "userProfile": Object {
          "data": Object {
            "avatar": null,
            "bio": null,
            "country": null,
            "email": "emasysnd@gmail.com",
            "firstName": null,
            "id": 1,
            "lastName": null,
            "moniker": "admin",
          },
          "success": true,
        },
      }
    }
    clearRecipes={[Function]}
    delRecipe={[Function]}
    downvote={[Function]}
    editRecipe={[Function]}
    getRecipeItem={[Function]}
    history={
      Object {
        "push": [Function],
      }
    }
    match={
      Object {
        "params": Object {
          "id": 1,
        },
      }
    }
    recipes={
      Object {
        "recipeItem": Object {},
      }
    }
    setFavorite={[Function]}
    uploadImg={[Function]}
    upvote={[Function]}
    userInfo={
      Object {
        "data": Object {
          "avatar": "",
          "bio": "",
          "country": "",
          "email": "",
          "firstName": "",
          "id": 1,
          "lastName": "",
          "moniker": "",
        },
      }
    }
  >
    <div>
      <Connect(Navbar)
        className="bg-dark fixed-top"
      />
      <ToastContainer
        autoClose={5000}
        bodyClassName=""
        className={null}
        closeButton={<DefaultCloseButton />}
        closeOnClick={true}
        hideProgressBar={false}
        newestOnTop={false}
        pauseOnHover={true}
        position="top-right"
        progressClassName=""
        style={null}
        toastClassName=""
        transition={[Function]}
      >
        <div />
      </ToastContainer>
      <DeleteModal
        confirmDelete={[Function]}
      >
        <div
          aria-hidden="true"
          aria-labelledby="deleteModalTitle"
          className="modal fade"
          id="deleteModal"
          role="dialog"
          tabIndex="-1"
        >
          <div
            className="modal-dialog modal-dialog-centered"
            role="document"
          >
            <div
              className="modal-content"
            >
              <div
                className="modal-header"
              >
                <h5
                  className="modal-title"
                  id="exampleModalLongTitle"
                >
                  Delete Item
                </h5>
                <button
                  aria-label="Close"
                  className="close"
                  data-dismiss="modal"
                  type="button"
                >
                  <span
                    aria-hidden="true"
                  >
                    ×
                  </span>
                </button>
              </div>
              <div
                className="modal-body"
              >
                Are you sure you want to continue with this action?
              </div>
              <div
                className="modal-footer"
              >
                <button
                  className="btn btn-secondary btn-lg"
                  data-dismiss="modal"
                  type="button"
                >
                  No
                </button>
                <button
                  className="btn btn-danger btn-lg"
                  data-dismiss="modal"
                  id="confirmDelete"
                  onClick={[Function]}
                  type="button"
                >
                  Yes
                </button>
              </div>
            </div>
          </div>
        </div>
      </DeleteModal>
      <section
        className="container mt-80"
        data-aos="fade-up"
        data-duration="800"
      >
        <div
          className="row justify-content-center catalog-wrapper mb-20"
          id="catalog"
        >
          <div
            className="col-lg-6 col-md-6 col-sm-8  mb-5 recipe-image"
          >
            Loading...
          </div>
          <Ingredients
            data={
              Object {
                "data": Object {
                  "avatar": "",
                  "bio": "",
                  "country": "",
                  "email": "",
                  "firstName": "",
                  "id": 1,
                  "lastName": "",
                  "moniker": "",
                },
              }
            }
            ingredients={Object {}}
          >
            <div
              className="col-lg-5 col-sm-12"
            >
              <h2
                className="wrapWord text-capitalize"
              >
                loading...
              </h2>
              <small
                className="text-capitalize"
              >
                A recipe by
                 
                <Link
                  className=" bolder text-info"
                  replace={false}
                  to="/user/1"
                >
                  <a
                    className=" bolder text-info"
                    onClick={[Function]}
                  />
                </Link>
              </small>
               
              <br />
              <small
                className=""
              >
                Posted on:
                 
                loading...
              </small>
              <hr />
              <h5
                className="text-muted"
              >
                Description
              </h5>
              <div
                className="pb-3 "
              >
                <div
                  className="bg-light direction rounded p-15"
                >
                  loading...
                </div>
              </div>
              <hr />
              <h5
                className="text-muted"
              >
                Ingredients
              </h5>
              <hr />
              <div
                className="pb-3"
              >
                <ul
                  className="list-group wrapWord"
                />
              </div>
              <h5
                className="text-muted"
              >
                Directions
              </h5>
              <hr />
              <div
                className="p-10 direction rounded  bg-light"
              >
                loading...
              </div>
            </div>
          </Ingredients>
        </div>
        <Connect(Reviews) />
      </section>
    </div>
  </RecipeItem>
</MockRouter>
`;
